[package]
name = "plookup"
version = "0.1.0"
authors = ["Kevaundray Wedderburn <kevtheappdev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
merlin = "2.0.0"
num-traits = { version = "0.2", default-features = true }
algebra = { git = "https://github.com/scipr-lab/zexe/", default-features = false, features = ["full"] }
ff-fft = { git = "https://github.com/scipr-lab/zexe/"}
