[package]
name = "plookup"
version = "0.1.0"
authors = ["Kevaundray Wedderburn <kevtheappdev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
merlin = "2.0.0"
rand = "0.7.2"
rand_core = { version = "0.5", default-features = false }
num-traits = { version = "0.2", default-features = true }
ark-bls12-381 = "^0.3.0"
ark-ec = "^0.3.0"
ark-ff = "^0.3.0"
ark-poly = "^0.3.0"
ark-poly-commit = "^0.3.0"
ark-std = "^0.3.0"
itertools = "0.8.2"
rand_chacha = "0.2"
rayon = "1.3.0"